build/nginx/conf.d/nginx-conf-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-chat
  labels:
    app: web-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-chat
  template:
    metadata:
      labels:
        app: web-chat
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: "/usr/share/nginx/html/"
        - name: config
          mountPath: "/etc/nginx/"
      volumes:
      - name: html
        configMap:
          name: web-chat
      - name: config
        configMap:
          name: web-chat-nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: web-chat
spec:
  selector:
    app: web-chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
