build/nginx/conf.d/nginx-conf-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-platform
  labels:
    app: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
      - name: nginx
        image: nginx:1.22-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          # readOnly: true
          subPath: nginx.conf
          name: config
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
          name: config
        - mountPath: /usr/share/nginx/html
          name: html
      volumes:
      - name: config
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: default.conf
              path: conf.d/default.conf
      - name: html
        hostPath:
          path: /home/dev/api-core-main/proj/65sa-web-platform 
---
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  selector:
    app: platform
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30012 ######
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: '*.web-platform.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform
            port:
              number: 80
