build/nginx/conf.d/nginx-conf-platform3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-platform
  labels:
    app: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
      - name: nginx
        # image: nginx:1.22-alpine
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          name: nginx-config
      volumes:
      - name: nginx-config
        configMap:
          name: confnginx
---
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  selector:
    app: platform
  ports:
      - port: 80
        targetPort: 80
  #       nodePort: 30012 ######
  # type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - web-platform.com
  rules:
  - host: web-platform.com
    http:
      paths:
      - path: /dev65/platform/
        pathType: Prefix
        backend:
          service:
            name: platform
            port:
              number: 80
  - host: web-chat.com
    http:
      paths:
      - path: /dev65/chat/
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 81
  - host: api-core.com
    http:
      paths:
      - path: /dev65/api/
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
