build/nginx/conf.d/nginx-ingress-controller.yaml
# Reverse proxy
# default.conf
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller-defaultconf
  # annotations:
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: nginx-web-platform.com
      http:
        paths:
        - path: /dev65/api/
          pathType: Prefix
          backend:
            service:
              name: web-api
              port:
                number: 8000
        - path: /dev65/platform/
          pathType: Prefix
          backend:
            service:
              name: web-platform
              port:
                number: 80
        - path: /dev65/chat/
          pathType: Prefix
          backend:
            service:
              name: web-chat
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 8000
      targetPort: 80
